improve chinese tranlsations

--- a/webapp/src/translations/languages/zh.json
+++ b/webapp/src/translations/languages/zh.json
@@ -26,7 +26,7 @@
       "balance": "金额",
       "dfi": "DFI",
       "wallets": "钱包",
-      "dex": "去中兑换",
+      "dex": "去中心化兑换",
       "masterNodes": "主节点",
       "blockchain": "区块链",
       "tokens": "代币",
@@ -309,7 +309,7 @@
         "uploadCsv": "上传 CSV",
         "addAddress": "添加地址",
         "address": "地址",
-        "addAddressesText": "最初分发列表中添加地址",
+        "addAddressesText": "最初分发列表内添加地址",
         "enterDfiAddress": "输入 DFI 地址",
         "dragAndUploadCSV": "拖放上传 CSV 文件。",
         "verifyingCollateral": "抵押验证中"
@@ -340,10 +340,10 @@
         "remove": "删除",
         "apy": "APY",
         "pooled": "池冲",
-        "pooledBTC": "池中 BTC",
+        "pooledBTC": "池内 BTC",
         "btcPoolShare": "BTC 池股",
         "totalReward": "总回报",
-        "pooledDFI": "池中 DFI",
+        "pooledDFI": "池内 DFI",
         "dfiPoolShare": "DFI 池股",
         "poolShare": "池股"
       }
@@ -383,7 +383,7 @@
         "add": "添加",
         "remove": "删除",
         "apy": "APY",
-        "pooled": "池中",
+        "pooled": "池内",
         "poolReward": "池报",
         "poolShare": "池股",
         "yourPrivateKey": "个人私钥",
@@ -509,6 +509,7 @@
       "english": "英文",
       "german": "德文",
       "french": "法文",
+      "chinese": "中文",
       "displayAmount": "数目显示单位",
       "dFI": "DFI",
       "fi": "fi",
@@ -542,7 +543,7 @@
         "mnemonicGuidelineWarning": "请勿把助记种子储存在电脑或手机里，并确保它的安全。",
         "generateNewSet": "重新生成另外一套24个字",
         "walletRecoveryInfoLine1": "钱包恢复种子 (“助记种子”, “种子密码”, “助记密码”) 是一种容易记得的私钥代表格式。您钱包的所有扩展钥匙都是从这种子生成的。",
-        "walletRecoveryInfoLine2": "种子的子是从 BIP39 标准中的2048个字随机选出的，而提供24位的安全。",
+        "walletRecoveryInfoLine2": "种子的子是从 BIP39 标准内的2048个字随机选出的，而提供24位的安全。",
         "learnMoreAtBitcoinBtn": "在比特币 Wiki 了解更多",
         "copied24Words": "我已经把24个子循序抄下",
         "continue": "继续",
@@ -555,7 +556,7 @@
         "verifyMnemonicGuideline": "为了确保你已抄下助记种子，请选出您助记种子里的其中6个字。",
         "verifyMnemonicWhichOne": "哪个是…",
         "wordQuestion": "第%{wordNum}个字？",
-        "creatingYourWallet": "创建确保中",
+        "creatingYourWallet": "创建钱包中",
         "backToWalletPage": "关闭",
         "skipVerificationTextHeader": "跳跃（风险自负）",
         "skipVerificationText": "请按照顺序，把以下24个字记下来。字的循序非常重要。这24个字是您用来恢复和转移钱包的助记种子。没有它，你就不能恢复钱包。请别丢失了。",
