--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -509,6 +509,8 @@
       "english": "English",
       "german": "German",
       "french": "French",
+      "chinese": "Chinese (Simplified)",
+      "chinese_traditional": "Chinese (Traditional)",
       "displayAmount": "Display amounts in unit",
       "dFI": "DFI",
       "fi": "fi",
