--- a/webapp/src/translations/languages/ru.json
+++ b/webapp/src/translations/languages/ru.json
@@ -167,7 +167,7 @@
     },
     "tokens": {
       "tokensPage": {
-        "title": "Токены – DeFi app",
+        "title": "Токены",
         "loading": "Загрузка...",
         "createToken": "Создать",
         "tokens": "Токены",
@@ -583,5 +583,8 @@
     "confirmResetWalletText": "To confirm reset wallet, type '%{text}' in the field.",
     "yeResetpWalletNotice": "Yes",
     "noResetWalletNotice": "No"
+  },
+  "general": {
+    "defiApp": "Блокчейн-Клиент DeFi"
   }
 }
