--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -280,7 +280,8 @@
         "apy": "APY",
         "apyTooltipMessage": "APY indicated here only includes DFI incentives, without commission. Actual APY with commission is thus, more",
         "totalLiquidity": "Total liquidity (USD)",
-        "addRemoveLiquidity": "Add or remove liquidity"
+        "addRemoveLiquidity": "Add or remove liquidity",
+        "totalValueLocked": "Total Value Locked (USD)"
       },
       "addLiquidity": {
         "ok": "Ok",
