--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -7,7 +7,7 @@
       "waitingForSyncStatus": "Warten auf den Synchronisierungsstatus…",
       "synced": "Synchronisiert",
       "justNow": "Hat gerade synchronisiert",
-      "aMinuteAgo": "Synchronisiert vor einer minute",
+      "aMinuteAgo": "Synchronisiert vor einer Minute",
       "blockInfo": "Block %{latestSyncedBlock} von %{latestBlock}",
       "network": "Netzwerk",
       "downloading": "Update wird heruntergeladen"
@@ -147,7 +147,7 @@
       "createMasterNode": {
         "title": "Erstelle eine Masternode",
         "masterNodeName": "Masternode Name",
-        "lackOfBalanceMsg": "Masternode erstellen nicht möglich, aufgrund fehlendem Guthaben. Mindestens 1 million DFI ist erforderlich zum Erstellen der Masternode",
+        "lackOfBalanceMsg": "Masternode erstellen nicht möglich, aufgrund von fehlendem Guthaben. Mindestens 1 Million DFI ist zum Erstellen der Masternode erforderlich.",
         "confirmationText": "Bist du sicher, dass du eine Masternode erstellen willst?",
         "restartNodeConfirmationText": "Bist du sicher, dass du eine Node neustarten willst?",
         "createNodeButton": "Erstelle eine Masternode",
@@ -191,7 +191,7 @@
       "liquidityPage": {
         "title": "Liquidity – DeFiChain Client",
         "yourLiquidity": "Your liquidity",
-        "yourLiquidityInfo": "Du kannst jetzt die Liquidity minen für potentiell hohe Erträge nutzen. Wähle unten ein Pool-Paar aus, stelle Liquidität bereit, um den DEX (Dezentralisierte Börse) mit Energie zu versorgen, damit du anfangen kannst, Gebühren und jährliche Erträge zu verdienen. Du kannst jederzeit ausbezahlen.",
+        "yourLiquidityInfo": "Du kannst jetzt das Liquidity Mining für potentiell hohe Erträge nutzen. Wähle unten ein Pool-Paar aus, stelle Liquidität bereit, um den DEX (Dezentralisierte Börse) mit Energie zu versorgen, damit du anfangen kannst, Gebühren und jährliche Erträge zu verdienen. Du kannst jederzeit ausbezahlen.",
         "noLiquidity": "Keine Liquidität gefunden. Möchtest du dem Pool Liquidität zuführen?",
         "loading": "Laden…",
         "watchVideo": "Video ansehen",
@@ -228,7 +228,7 @@
         "swap": "Swap",
         "pool": "Pool",
         "liquidity": "Liquidity",
-        "enterAnAmount": "Geb einen Betrag zum Swappen ein",
+        "enterAnAmount": "Gib einen Betrag zum Swappen ein",
         "continue": "Weiter",
         "cancel": "Abbrechen",
         "from": "Von",
@@ -259,7 +259,7 @@
         "poolReward": "Pool Belohnung",
         "poolShare": "Pool Anteil",
         "yourPrivateKey": "Dein eigener Private-Key",
-        "yourPrivateKeyInfo": "Behalte die Kontrolle über Deinen eigenen Private-Key.",
+        "yourPrivateKeyInfo": "Behalte die Kontrolle über deinen eigenen Private-Key.",
         "nonCustodial": "Non-custodial",
         "nonCustodialInfo": "Dein Geld bleibt in deiner Wallet und geht niemals durch einen zentralisierte Exchange.",
         "decentralizedInterface": "Dezentralisierte Schnittstelle",
@@ -267,9 +267,9 @@
         "poweredLiquidityPools": "Powered by liquidity pools",
         "poweredLiquidityPoolsInfo": "Swaps werden über automatisierte Liquiditätspools abgewickelt, nicht über zentralisierte Auftragsbücher.",
         "swaping": "Swapping",
-        "amountInsufficient": "Insufficient Amount in your account",
-        "txHash": "Transaction Hash",
-        "somethingWentWrong": "Something went wrong",
+        "amountInsufficient": "Unzureichender Betrag in deinem Konto",
+        "txHash": "Transaktions-Hash",
+        "somethingWentWrong": "Etwas lief schief",
         "preparingUTXO": "UTXO vorbereitet",
         "UTXOPrepared": "UTXO vorbereiten",
         "transferringTokens": "Übertragen von Tokens",
@@ -364,7 +364,7 @@
         "searchTokens": "Tokens suchen",
         "dat": "DAT",
         "dct": "DCT",
-        "paginationRange": "%{from} – %{to} of %{total} tokens",
+        "paginationRange": "%{from} – %{to} von %{total} Tokens",
         "datLabels": {
           "type": "Typ",
           "price": "Preis",
