Integrated Refresh Utxos setting feature (#190)
* Integrated Refresh Utxos setting feature

* Changed the constant amount for refresh utxos

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -511,6 +511,8 @@
       "launchOptions": "Start Optionen",
       "reindexOption": "Reindex-Option",
       "reindexAfterSaving": "Reindex nach Speichern",
+      "refreshUtxos": "Refresh UTXOs",
+      "refreshUtxosAfterSaving": "Refresh Utxos after saving",
       "launchAtLogin": "Start bei der Anmeldung",
       "minimizedAtLaunch": "Minimiert beim starten",
       "storage": "Lagerung",
@@ -765,6 +767,7 @@
     "importSuccess": "Import-wallet erfolgreich abgeschlossen",
     "masterNodeOperatorAddressFailure": "Masternode-Operator-Adresse ist nicht vorhanden",
     "restartNode": "Node neustarten",
+    "refreshUtxos": "Refreshing Utxos it may take some time.",
     "nodeDisconnected": "Verbindung mit Node ist getrennt",
     "electronRequiredError": "Electron App wird für Neustart benötigt",
     "addressIsNotAPartOfWallet": "%{addressName} ist nicht Teil der Wallet.",
