--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -506,6 +506,8 @@
       "launchAtLogin": "Launch at login",
       "reindexOption": "ReIndex Option",
       "reindexAfterSaving": "Reindex after saving",
+      "refreshUtxos": "Refresh UTXOs",
+      "refreshUtxosAfterSaving": "Refresh Utxos after saving",
       "minimizedAtLaunch": "Minimized at launch",
       "storage": "Storage",
       "pruneBlockStorage": "Prune block storage",
@@ -758,6 +760,7 @@
     "importSuccess": "Wallet imported successfully",
     "masterNodeOperatorAddressFailure": "Masternode operator address is not present",
     "restartNode": "Restarting node. This may take a few minutes.",
+    "refreshUtxos": "Refreshing Utxos it may take some time.",
     "nodeDisconnected": "Node is disconnected",
     "electronRequiredError": "Electron app is needed for restart",
     "addressIsNotAPartOfWallet": "%{addressName} is not a part of wallet.",
