chore: remove test change

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -544,7 +544,7 @@
         "wallet": {
             "createOrRestoreWalletPage": {
                 "title": "Wallet - Create or restore wallet",
-                "createOrRestoreWallet": "Create or restore bawifdawoidjowao",
+                "createOrRestoreWallet": "Create or restore wallet",
                 "createANewWallet": "Create a new wallet",
                 "restoreWalletFromMnemonicSeed": "Restore wallet from mnemonic seed",
                 "walletSyncNotice": "You will be able to create or restore a wallet when sync is complete",
