feat: added new languages (ZHS, ZHT, NL)

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -531,6 +531,9 @@
       "english": "Englisch",
       "german": "Deutsch",
       "french": "Französisch",
+      "chinese": "Chinese (Simplified)",
+      "chinese_traditional": "Chinese (Traditional)",
+      "dutch": "Dutch",
       "displayAmount": "Zeige Werte in Einheiten",
       "dFI": "DFI",
       "fi": "fi",
