--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -527,6 +527,7 @@
       "french": "French",
       "chinese": "Chinese (Simplified)",
       "chinese_traditional": "Chinese (Traditional)",
+      "dutch": "Dutch",
       "displayAmount": "Display amounts in unit",
       "dFI": "DFI",
       "fi": "fi",
