--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -528,6 +528,7 @@
       "chinese": "Chinese (Simplified)",
       "chinese_traditional": "Chinese (Traditional)",
       "dutch": "Dutch",
+      "russian": "Russian",
       "displayAmount": "Display amounts in unit",
       "dFI": "DFI",
       "fi": "fi",
