--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -511,8 +511,8 @@
       "launchOptions": "Start Optionen",
       "reindexOption": "Reindex-Option",
       "reindexAfterSaving": "Reindex nach Speichern",
-      "refreshUtxos": "Refresh UTXOs",
-      "refreshUtxosAfterSaving": "Refresh Utxos after saving",
+      "refreshUtxos": "UTXOs neu laden",
+      "refreshUtxosAfterSaving": "UTXOs nach speichern neu laden",
       "launchAtLogin": "Start bei der Anmeldung",
       "minimizedAtLaunch": "Minimiert beim starten",
       "storage": "Lagerung",
@@ -770,7 +770,7 @@
     "importSuccess": "Import-wallet erfolgreich abgeschlossen",
     "masterNodeOperatorAddressFailure": "Masternode-Operator-Adresse ist nicht vorhanden",
     "restartNode": "Node neustarten",
-    "refreshUtxos": "Refreshing Utxos it may take some time.",
+    "refreshUtxos": "UTXOs werden neu geladen, dies kann eine Weile dauern.",
     "nodeDisconnected": "Verbindung mit Node ist getrennt",
     "electronRequiredError": "Electron App wird für Neustart benötigt",
     "addressIsNotAPartOfWallet": "%{addressName} ist nicht Teil der Wallet.",
