--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -612,7 +612,7 @@
         "continue": "Weiter",
         "to": "An",
         "pleaseVerifyAmount": "Bitte überprüfen Sie den Betrag und Empfänger",
-        "completeSend": "Senden komplett",
+        "completeSend": "Senden abschließen",
         "sendFailed": "Beim Senden des Betrags ist ein Fehler aufgetreten",
         "transactionSuccessMsg": "Die Transaktion war ein voller Erfolg. Dein Wallet-Guthaben wird aktualisiert, sobald die Transaktion bestätigt wurde durch die DeFiChain.",
         "backToWallet": "Zurück zur Wallet",
@@ -624,19 +624,19 @@
         "insufficientUtxos": "Ungenügend UTXOS"
       },
       "receivePage": {
-        "receiveDFITitle": "DFI Erhalten– DeFi app",
+        "receiveDFITitle": "DFI empfangen– DeFi app",
         "wallet": "Wallet",
-        "receiveDFI": "DFI Erhalten",
-        "optional": "Freiwillig",
+        "receiveDFI": "DFI empfangen",
+        "optional": "Optional",
         "amount": "Höhe",
         "dFI": "DFI",
         "message": "Nachricht",
         "label": "Label",
-        "amountToReceive": "Betrag zu Erhalten",
+        "amountToReceive": "Empfangsbetrag",
         "addressNotAvailable": "Adresse nicht verfügbar",
         "cancel": "Abbrechen",
         "continue": "Weiter",
-        "receive": "Erhalten",
+        "receive": "Empfangen",
         "newAddressButton": "Neue Adresse",
         "addressLabel": "Adressen Bezeichnung",
         "createNewAddressNotice": "Geben Sie Ihrer neuen DFI-Adresse eine aussagekräftige Bezeichnung",
@@ -646,7 +646,7 @@
         "legacyAddress": "Legacy Adresse",
         "addressType": "Adressen Type",
         "automaticallyGenerateNewAddress": "Automatisch eine neue Adresse erzeugen",
-        "showAdvanceOptions": "Erweiterte Optionen anzeigen ",
+        "showAdvanceOptions": "Erweiterte Optionen anzeigen",
         "default": "Standard",
         "legacy": "Legacy",
         "addReceiveAddress": "Eine Empfangsadresse hinzufügen",
@@ -658,7 +658,7 @@
         "time": "Zeit",
         "amount": "Höhe",
         "message": "Nachricht",
-        "cancelRequest": "Anforderung Abbrechen"
+        "cancelRequest": "Anfrage abbrechen"
       },
       "paymentRequestList": {
         "label": "Label",
@@ -685,7 +685,7 @@
         "wallets": "Wallets",
         "delete": "Löschen",
         "send": "Senden",
-        "receive": "Erhalten",
+        "receive": "Empfangen",
         "paymentRequests": "Zahlungsanordnungen",
         "noPaymentRequests": "Keine Zahlung Anfragen zur Verfügung",
         "paginationRange": "%{to} – %{from} von %{total} Zahlungsaufforderung",
