chore: added german translations for LP confirm message

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -621,7 +621,9 @@
         "sendTitle": "Senden",
         "send": "Senden",
         "pleaseTransferFunds": "Bitte überweise einige DFIs auf dein Konto",
-        "insufficientUtxos": "Ungenügend UTXOS"
+        "insufficientUtxos": "Ungenügend UTXOS",
+        "sendLPWarning": "Es scheint, als würdest du Liquiditätspool-Anteile (LP) Token versenden. Bitte beachte, dass das Senden deiner LP-Token an eine andere DeFiChain-Adresse deinen Liquiditätspool-Anteil an diese Adresse überträgt. Das Versenden von LP-Token an einen anderen Ort als eine andere DeFiChain-Wallet, wie z.B. eine Börse, kann zu einem irreversiblen Verlust der Gelder führen.",
+        "sendLPConfirm": "Ich bestätige, dass ich beabsichtige, LP-Token zu senden und nehme zur Kenntnis, dass das Senden von LP-Token an Adressen, die keine DeFiChain-Wallets sind, zu einem irreversiblen Verlust von Geldern führen kann."
       },
       "receivePage": {
         "receiveDFITitle": "DFI Erhalten– DeFi app",
