fix: add fallback for update issues

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -826,6 +826,7 @@
     "noResetWalletNotice": "No"
   },
   "general": {
-    "defiApp": "DeFi app"
+    "defiApp": "DeFi app",
+    "updateFailed": "An error occurred while checking for a software update."
   }
 }
